HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncCaptureOutlivesFrame/Expected.uv
//! Expected diagnostic metadata for the AsyncCaptureOutlivesFrame rejected-source specimen.

expectedDiagnostic("E-CON-0280", "rule.21.Async-Capture-Err")
